--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       android_version:
         description: 'Android Version (Kernel) (e.g., 14)'
-        required: true
+        required: false
       kernel_version:
         description: 'Kernel Version (e.g., 6.1)'
         required: true
