--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,14 +39,15 @@ jobs:
       - name: Set up Android Kernel source
         run: |
           mkdir -p android-kernel && cd android-kernel
-          # 修复：如果 android_version 为空，直接使用内核版本
+          # 修复：使用正确的分支格式
           if [ -z "${{ github.event.inputs.android_version }}" ]; then
-            repo init -u https://android.googlesource.com/kernel/manifest -b  common-android-${{ github.event.inputs.kernel_version }}
-            
+            echo "使用内核版本: ${{ github.event.inputs.kernel_version }}"
+            repo init -u https://android.googlesource.com/kernel/manifest -b common-android-${{ github.event.inputs.kernel_version }}
           else
+            echo "使用安卓版本: ${{ github.event.inputs.android_version }}, 内核版本: ${{ github.event.inputs.kernel_version }}"
             repo init -u https://android.googlesource.com/kernel/manifest -b common-android${{ github.event.inputs.android_version }}-${{ github.event.inputs.kernel_version }}
           fi
-          repo sync -j$(nproc) -c --no-tags --optimized-fetch --force-sync
+          repo sync -j4 -c --no-tags --optimized-fetch --force-sync
 
       - name: Copy kerneldriver
         run: |
@@ -88,6 +89,7 @@ jobs:
         run: |
           cd android-kernel
           echo "drivers/kerneldriver/${{ github.event.inputs.driver_name }}" >> common/android/gki_${{ github.event.inputs.target_arch }}_modules
+          
       - name: Increase stack frame size limit
         run: |
           cd android-kernel
@@ -98,6 +100,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential flex bison libssl-dev libelf-dev bc python-is-python3
+          
       - name: Fix missing kprobe symbols for Android 13
         if: ${{ github.event.inputs.android_version == 13 }}
         run: |
@@ -111,7 +114,13 @@ jobs:
       - name: Build kernel module
         run: |
           cd android-kernel
-          if [ ${{ github.event.inputs.android_version }} -le 13 ]; then
+          # 处理版本号变量，当android_version为空时使用默认值
+          if [ -z "${{ github.event.inputs.android_version }}" ]; then
+            # 如果不指定安卓版本，假设为较低版本使用传统构建
+            echo "未指定安卓版本，使用传统构建系统"
+            BUILD_CONFIG=common/build.config.gki.${{ github.event.inputs.target_arch }} LTO=thin build/build.sh -j32
+            OUTPUT_PATH="out/android-${{ github.event.inputs.kernel_version }}/dist"
+          elif [ ${{ github.event.inputs.android_version }} -le 13 ]; then
             BUILD_CONFIG=common/build.config.gki.${{ github.event.inputs.target_arch }} LTO=thin build/build.sh -j32
             OUTPUT_PATH="out/android${{ github.event.inputs.android_version }}-${{ github.event.inputs.kernel_version }}/dist"
           else
